Add Vehicles page with full vehicle collection
This commit adds the Vehicles page for the Urban Ride car rental website, including:

- vehicles.html page with detailed sections for SUV, car, van, pickup, truck, budget car, and motorcycle
- Structured HTML with images, headings, and descriptive paragraphs for each vehicle
- Linked vehicle.css for page-specific styling and layout
- Responsive vehicle container design for uniform image sizing and text alignment
- Consistent header and footer matching the main website

Prepared for integration with homepage and future updates to vehicle content.

--- a/Car Rental Web Project/home.html
+++ b/Car Rental Web Project/home.html
@@ -24,7 +24,7 @@
         </div>
         <div class="navbar2">
             <ul>
-                <a href=""><li>Vehicles</li></a>
+                <a href="vehicles.html"><li>Vehicles</li></a>
                 <a href=""><li>Services</li></a>
                 <a href=""><li>Locations</li></a>
                 <a href=""><li>Vehicles</li></a>
@@ -76,26 +76,26 @@
             <h2>Meet the Fleet</h2>
             <div class="fleet-container">
                 <div class="fleet-card">
-                    <i class="fa-solid fa-motorcycle fa-7x"></i>
+                    <a href="vehicles.html#bike"><i class="fa-solid fa-motorcycle fa-7x"></i></a>
                     <a href=""><p>Motor Cycle</p></a>
                 </div>
 
                 <div class="fleet-card">
-                    <i class="fa-solid fa-car-side fa-7x"></i>
+                    <a href="vehicles.html#car"><i class="fa-solid fa-car-side fa-7x"></i></a>
                     <a href=""><p>Car</p></a>
                 </div>
 
                 <div class="fleet-card">
-                    <i class="fa-solid fa-van-shuttle fa-7x"></i>
+                    <a href="vehicles.html#van"><i class="fa-solid fa-van-shuttle fa-7x"></i></a>
                     <a href=""><p>Van</p></a>
                 </div>
 
                 <div class="fleet-card">
-                    <i class="fa-solid fa-truck fa-7x"></i>
+                    <a href="vehicles.html#truck"><i class="fa-solid fa-truck fa-7x"></i></a>
                     <a href=""><p>Truck</p></a>
                 </div>
             </div>
-            <button>View all Vehicle</button>
+            <a href="vehicles.html"><button>View all Vehicle</button></a>
         </section>
 
         <section class="trip">
@@ -175,8 +175,9 @@
                 <button>Subscribe</button>
             </form>
         </section>
+    </main>
 
-        <footer>
+    <footer>
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Urban Ride</h3>
@@ -186,7 +187,7 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="home.html">Home</a></li>
-                        <li><a href="#">Vehicles</a></li>
+                        <li><a href="vehicles.html">Vehicles</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Contacts</a></li>
                     </ul>
@@ -205,8 +206,6 @@
                 &copy; 2025 Urban Ride. All rights reserved.
             </div>
         </footer>
-
-    </main>
 
 </body>
 </html>
